--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -1,8 +1,8 @@
 {
   "name": "EPFL ServiceNow Extension",
-  "description": "EPFL ServiceNow Extension",
+  "description": "A custom web extension to quickly retrieve essentials information about users",
   "manifest_version": 2,
-  "version": "0.0.1",
+  "version": "1.0.0",
 
   "applications": {
     "gecko": {
