--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "content_scripts": [{
     "js": [ "js/contentscript.js" ],
     "matches": [
-      "*://it.epfl.ch/*",
+      "*://support.epfl.ch/*",
       "*://infowww.epfl.ch/*"
     ],
     "run_at": "document_end"
@@ -30,7 +30,7 @@
   "permissions": [
     "tabs",
     "storage",
-    "*://it.epfl.ch/*",
+    "*://support.epfl.ch/*",
     "*://people.epfl.ch/*",
     "*://search.epfl.ch/*"
   ],
