--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "Apache-2.0",
   "repository": "https://github.com/epfl-devrun/epfl-servicenow-extension.git",
   "scripts": {
+    "build": "grunt build",
+    "package": "grunt package",
+    "serve": "grunt serve",
     "test": "grunt test"
   },
   "devDependencies": {
