--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -21,7 +21,8 @@
   }],
 
   "options_ui": {
-    "page": "options.html"
+    "page": "options.html",
+    "browser_style": true
   },
 
   "browser_action": {
