--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^22.0.0",
-    "grunt-replace": "^1.0.1",
+    "grunt-replace-regex": "^1.0.3",
     "load-grunt-config": "^3.0.0"
   },
   "dependencies": {}
