--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,7 @@
     "js": [ "js/contentscript.js" ],
     "matches": [
       "*://support.epfl.ch/*",
+      "*://epfl.service-now.com/*",
       "*://infowww.epfl.ch/*"
     ],
     "run_at": "document_end"
@@ -31,6 +32,7 @@
     "tabs",
     "storage",
     "*://support.epfl.ch/*",
+    "*://epfl.service-now.com/*",
     "*://people.epfl.ch/*",
     "*://search.epfl.ch/*"
   ],
