--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,8 +8,7 @@
     "js": [ "js/contentscript.js" ],
     "matches": [
       "*://support.epfl.ch/*",
-      "*://epfl.service-now.com/*",
-      "*://infowww.epfl.ch/*"
+      "*://epfl.service-now.com/*"
     ],
     "run_at": "document_end"
   }],
