--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "grunt": "^1.3.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^23.0.0",
+    "grunt-eslint": "^24.0.0",
     "grunt-replace-regex": "^1.0.3",
-    "load-grunt-config": "^3.0.1"
-  },
-  "dependencies": {}
+    "js-yaml": "^4.1.0",
+    "load-grunt-config": "^4.0.1"
+  }
 }
