--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
+          node-version: '16'
 
       - name: Install and test
         run: |
-          echo '{"username": "", "password": ""}' > secret.json
           npm i
           npm t
